--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
 body {
-  margin: 80px 25px;
+  width: 375px;
+  margin: auto;
   font-family: "Spartan", sans-serif;
-  background-image: url(../images/bg-pattern-top-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
+}
+#background {
+  padding: 80px 25px;
+  background-image: url(../images/bg-pattern-top-mobile.svg),
+    url(../images/bg-pattern-bottom-mobile.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-size: contain, contain;
+  background-position: top, bottom;
 }
 #mainSection {
   margin-bottom: 50px;
@@ -54,11 +60,12 @@ h1 {
   margin-bottom: 0;
 }
 .comment {
-  padding: 28px;
+  padding: 40px 28px;
   border-radius: 6px;
   margin-bottom: 16px;
   background-color: hsl(300, 43%, 22%);
   font-size: 13px;
+  line-height: 20px;
   color: hsl(0, 0%, 100%);
 }
 .comment:last-child {
@@ -68,16 +75,23 @@ h1 {
   width: 41px;
   height: 41px;
   border-radius: 20px;
+  margin-right: 22px;
   float: left;
 }
 #name {
+  margin-top: 3px;
   font-weight: 700;
 }
 #status {
   color: hsl(333, 80%, 67%);
 }
+.comment > p {
+  margin-top: 25px;
+  margin-bottom: 0;
+}
 
 .attribution {
+  margin-top: 2px;
   font-size: 11px;
   text-align: center;
 }
