--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  width: 375px;
+  min-width: 375px;
   margin: auto;
   font-family: "Spartan", sans-serif;
 }
@@ -14,12 +14,14 @@ body {
 #mainSection {
   margin-bottom: 50px;
 }
+#headerSection {
+  text-align: center;
+}
 h1 {
   margin: 0 40px 30px 40px;
   font-size: 30px;
   color: hsl(300, 43%, 22%);
   line-height: 1;
-  text-align: center;
 }
 #intro {
   margin-bottom: 40px;
@@ -27,7 +29,6 @@ h1 {
   font-weight: 500;
   color: hsl(303, 10%, 53%);
   line-height: 24px;
-  text-align: center;
 }
 .rating {
   height: 78px;
@@ -54,7 +55,6 @@ h1 {
   color: hsl(300, 43%, 22%);
   line-height: 39px;
   text-align: center;
-  clear: both;
 }
 #commentSection {
   margin-bottom: 0;
@@ -97,4 +97,61 @@ h1 {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 769px) {
+  body {
+    width: 100%;
+  }
+  #background {
+    max-width: 1440px;
+    padding: 130px 165px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url(../images/bg-pattern-top-desktop.svg),
+      url(../images/bg-pattern-bottom-desktop.svg);
+    background-repeat: no-repeat, no-repeat;
+  }
+  #mainSection {
+  }
+  #headerSection {
+    float: left;
+    width: 49%;
+    text-align: left;
+  }
+  h1 {
+    margin: 0 100px 14px 0;
+    font-size: 40px;
+  }
+  #intro {
+    margin-right: 90px;
+  }
+  #ratingSection {
+    float: left;
+    width: 49%;
+  }
+  #ratingSection > div:nth-child(2) {
+    margin-left: 50px;
+  }
+  #ratingSection > div:nth-child(3) {
+    margin-left: 100px;
+  }
+  .stars,
+  .rating > p {
+    float: left;
+    margin-left: 30px;
+  }
+  .rating {
+    width: 445px;
+    height: 56px;
+  }
+  .stars {
+    margin-top: 2px;
+  }
+  .rating > p {
+    padding-top: 10px;
+  }
+  #commentSection {
+    clear: left;
+  }
 }
